k8s/elios-metrics/templates/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elios-postgres
  labels:
    app: elios-postgres
    app.kubernetes.io/managed-by: "Helm"
  annotations:
    meta.helm.sh/release-name: "elios-metrics"
    meta.helm.sh/release-namespace: "default"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elios-postgres
  template:
    metadata:
      labels:
        app: elios-postgres
        app.kubernetes.io/managed-by: "Helm"
      annotations:
        meta.helm.sh/release-name: "elios-metrics"
        meta.helm.sh/release-namespace: "default"
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: postgres-storage
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: elios-postgres
  labels:
    app: elios-postgres
    app.kubernetes.io/managed-by: "Helm"
  annotations:
    meta.helm.sh/release-name: "elios-metrics"
    meta.helm.sh/release-namespace: "default"
spec:
  selector:
    app: elios-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
