k8s/elios-metrics/templates/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elios-redis
  labels:
    app: elios-redis
    app.kubernetes.io/managed-by: "Helm"
  annotations:
    meta.helm.sh/release-name: "elios-metrics"
    meta.helm.sh/release-namespace: "default"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elios-redis
  template:
    metadata:
      labels:
        app: elios-redis
        app.kubernetes.io/managed-by: "Helm"
      annotations:
        meta.helm.sh/release-name: "elios-metrics"
        meta.helm.sh/release-namespace: "default"
    spec:
      containers:
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379
        volumeMounts:
          - mountPath: "/data"
            name: redis-storage
      volumes:
        - name: redis-storage
          persistentVolumeClaim:
            claimName: redis-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: elios-redis
  labels:
    app: elios-redis
    app.kubernetes.io/managed-by: "Helm"
  annotations:
    meta.helm.sh/release-name: "elios-metrics"
    meta.helm.sh/release-namespace: "default"
spec:
  selector:
    app: elios-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
