k8s/elios-metrics/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elios-metrics-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  - host: localkube.elios
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elios-metrics
            port:
              number: 3333
